--- a/index.html
+++ b/index.html
@@ -3,14 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Jack Simm – Designer</title>
-  <link href="https://fonts.googleapis.com/css2?family=SF+Pro+Display:wght@400;600;700&display=swap" rel="stylesheet">
+  <title>Jack Simm – Portfolio</title>
+  <link href="https://fonts.googleapis.com/css2?family=SF+Pro+Display:wght@400;600&display=swap" rel="stylesheet">
   <style>
     :root {
-      --text: #1d1d1f;
-      --light: #f5f5f7;
       --white: #ffffff;
-      --shadow: rgba(0, 0, 0, 0.05);
+      --text: #1d1d1f;
+      --bg-light: #f5f5f7;
     }
 
     * {
@@ -21,7 +20,7 @@
 
     body {
       font-family: 'SF Pro Display', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
-      background-color: var(--light);
+      background-color: var(--bg-light);
       color: var(--text);
       overflow-x: hidden;
     }
@@ -32,7 +31,7 @@
       align-items: center;
       padding: 20px 60px;
       background-color: var(--white);
-      box-shadow: 0 1px 4px var(--shadow);
+      box-shadow: 0 1px 4px rgba(0,0,0,0.05);
       position: sticky;
       top: 0;
       z-index: 100;
@@ -69,32 +68,38 @@
     }
 
     .hero {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      text-align: center;
-      padding: 140px 20px 80px;
+      position: relative;
+      width: 100%;
+      height: 100vh;
+      overflow: hidden;
     }
 
-    .hero h1 {
+    .hero img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+
+    .hero-text {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      text-align: center;
+      color: var(--white);
+      text-shadow: 0 2px 6px rgba(0, 0, 0, 0.4);
+    }
+
+    .hero-text h1 {
       font-size: 3.5rem;
       font-weight: 600;
-      margin-bottom: 20px;
+      margin-bottom: 16px;
       letter-spacing: -0.5px;
     }
 
-    .hero h2 {
-      font-size: 1.6rem;
+    .hero-text h2 {
+      font-size: 1.5rem;
       font-weight: 400;
-      color: #6e6e73;
-    }
-
-    .banner {
-      width: 100%;
-      max-height: 80vh;
-      object-fit: cover;
-      display: block;
     }
 
     footer {
@@ -102,6 +107,7 @@
       padding: 60px 20px;
       font-size: 0.9rem;
       color: #aaa;
+      background: var(--white);
     }
 
     @media (max-width: 768px) {
@@ -114,12 +120,12 @@
         width: calc(100% - 40px);
       }
 
-      .hero h1 {
+      .hero-text h1 {
         font-size: 2.4rem;
       }
 
-      .hero h2 {
-        font-size: 1.2rem;
+      .hero-text h2 {
+        font-size: 1.1rem;
       }
     }
   </style>
@@ -136,14 +142,14 @@
     </div>
   </header>
 
-  <!-- Hero Section -->
+  <!-- Hero Banner with Centered Text -->
   <section class="hero">
-    <h1>Jack Simm</h1>
-    <h2>Product & Industrial Designer</h2>
+    <img src="g.bip.25.JPG" alt="Banner Image" />
+    <div class="hero-text">
+      <h1>Jack Simm</h1>
+      <h2>Product Designer & Product Development Manager</h2>
+    </div>
   </section>
-
-  <!-- Banner Image -->
-  <img src="g.bip.25.JPG" alt="Product Banner" class="banner" />
 
   <footer>
     &copy; 2025 Jack Simm – Portfolio
