--- a/gallery.html
+++ b/gallery.html
@@ -4,19 +4,24 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Gallery – Jack Simm</title>
-  <link href="https://fonts.googleapis.com/css2?family=SF+Pro+Display:wght@400;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=SF+Pro+Display:wght@400;600&display=swap" rel="stylesheet">
   <style>
     :root {
+      --white: #ffffff;
       --text: #1d1d1f;
-      --light-text: #6e6e73;
-      --white: #fff;
-      --shadow: rgba(0, 0, 0, 0.06);
+      --bg-light: #f5f5f7;
+      --shadow: rgba(0, 0, 0, 0.05);
+    }
+
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
     }
 
     body {
       font-family: 'SF Pro Display', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
-      margin: 0;
-      background: #f9f9f9;
+      background-color: var(--bg-light);
       color: var(--text);
     }
 
@@ -25,16 +30,16 @@
       justify-content: space-between;
       align-items: center;
       padding: 20px 60px;
-      background: white;
-      box-shadow: 0 1px 4px rgba(0,0,0,0.05);
+      background-color: var(--white);
+      box-shadow: 0 1px 4px rgba(0, 0, 0, 0.05);
       position: sticky;
       top: 0;
       z-index: 100;
     }
 
     .logo {
-      font-size: 1.2rem;
       font-weight: 600;
+      font-size: 1.2rem;
       cursor: pointer;
     }
 
@@ -42,9 +47,9 @@
       position: absolute;
       top: 70px;
       left: 60px;
-      background-color: white;
-      box-shadow: 0 12px 30px rgba(0, 0, 0, 0.1);
+      background-color: var(--white);
       border-radius: 14px;
+      box-shadow: 0 12px 30px rgba(0, 0, 0, 0.1);
       display: none;
       flex-direction: column;
       z-index: 99;
@@ -62,45 +67,35 @@
       background: #f2f2f2;
     }
 
-    .banner {
-      width: 100%;
-      max-height: 80vh;
-      object-fit: cover;
-      display: block;
-      border-bottom: 1px solid #eee;
+    .container {
+      max-width: 1200px;
+      margin: 60px auto;
+      padding: 0 30px;
     }
 
-    .grid {
+    h1 {
+      font-size: 2.5rem;
+      font-weight: 600;
+      text-align: center;
+      margin-bottom: 40px;
+    }
+
+    .gallery-grid {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
-      gap: 60px;
-      padding: 80px 60px;
+      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+      gap: 40px;
     }
 
-    .card {
-      background: var(--white);
-      border-radius: 20px;
-      box-shadow: 0 20px 40px rgba(0, 0, 0, 0.08);
-      overflow: hidden;
-      transform: translateY(20px);
-      opacity: 0;
-      transition: all 0.6s ease;
-    }
-
-    .card img {
+    .gallery-grid img {
       width: 100%;
-      height: auto;
-      display: block;
-      transition: transform 0.3s ease;
+      border-radius: 12px;
+      box-shadow: 0 12px 24px rgba(0, 0, 0, 0.08);
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
     }
 
-    .card:hover img {
-      transform: scale(1.02);
-    }
-
-    .card.show {
-      opacity: 1;
-      transform: translateY(0);
+    .gallery-grid img:hover {
+      transform: scale(1.015);
+      box-shadow: 0 16px 32px rgba(0, 0, 0, 0.12);
     }
 
     footer {
@@ -108,6 +103,7 @@
       padding: 60px 20px;
       font-size: 0.9rem;
       color: #aaa;
+      background: var(--white);
     }
 
     @media (max-width: 768px) {
@@ -120,9 +116,8 @@
         width: calc(100% - 40px);
       }
 
-      .grid {
-        padding: 40px 20px;
-        gap: 30px;
+      h1 {
+        font-size: 2rem;
       }
     }
   </style>
@@ -130,7 +125,7 @@
 <body>
 
   <header>
-    <div class="logo" onclick="toggleDropdown()">≡ Jack Simm</div>
+    <div class="logo" onclick="toggleDropdown()">≡</div>
     <div class="dropdown" id="dropdownMenu">
       <a href="index.html">Home</a>
       <a href="gallery.html">Gallery</a>
@@ -139,15 +134,15 @@
     </div>
   </header>
 
-  <!-- Banner Image -->
-  <img src="g.bip.25.JPG" alt="Featured Product Banner" class="banner" />
-
-  <!-- Gallery Grid -->
-  <section class="grid">
-    <div class="card"><img src="g.bip.25.JPG" alt="Blue and Yellow Design" /></div>
-    <div class="card"><img src="untitled.31.jpg" alt="Exploded View Design" /></div>
-    <!-- Add more .card blocks for additional images -->
-  </section>
+  <div class="container">
+    <h1>Gallery</h1>
+    <div class="gallery-grid">
+      <img src="Exploded Organiser.32.jpg" alt="Exploded Organiser View 1" />
+      <img src="untitled.31.jpg" alt="Exploded Organiser View 2" />
+      <img src="g.bip.25.JPG" alt="Design Image 3" />
+      <!-- Add more <img> tags here if you have more images -->
+    </div>
+  </div>
 
   <footer>
     &copy; 2025 Jack Simm – Portfolio
@@ -165,22 +160,6 @@
       if (!menu.contains(e.target) && e.target !== toggle) {
         menu.style.display = "none";
       }
-    });
-
-    // Fade-in animation on scroll
-    const cards = document.querySelectorAll('.card');
-    const observer = new IntersectionObserver((entries) => {
-      entries.forEach(entry => {
-        if (entry.isIntersecting) {
-          entry.target.classList.add('show');
-        }
-      });
-    }, {
-      threshold: 0.1
-    });
-
-    cards.forEach(card => {
-      observer.observe(card);
     });
   </script>
 
