--- a/gallery.html
+++ b/gallery.html
@@ -9,8 +9,7 @@
     :root {
       --white: #ffffff;
       --text: #1d1d1f;
-      --bg-light: #f5f5f7;
-      --shadow: rgba(0, 0, 0, 0.05);
+      --bg: #f5f5f7;
     }
 
     * {
@@ -21,7 +20,7 @@
 
     body {
       font-family: 'SF Pro Display', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
-      background-color: var(--bg-light);
+      background-color: var(--bg);
       color: var(--text);
     }
 
@@ -68,34 +67,46 @@
     }
 
     .container {
-      max-width: 1200px;
+      max-width: 1300px;
       margin: 60px auto;
       padding: 0 30px;
     }
 
     h1 {
-      font-size: 2.5rem;
-      font-weight: 600;
       text-align: center;
-      margin-bottom: 40px;
+      font-size: 2.8rem;
+      margin-bottom: 60px;
+      font-weight: 600;
     }
 
-    .gallery-grid {
+    .grid {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-      gap: 40px;
+      gap: 30px;
     }
 
-    .gallery-grid img {
+    .gallery-item {
+      opacity: 0;
+      transform: translateY(30px);
+      transition: opacity 0.8s ease-out, transform 0.8s ease-out;
+    }
+
+    .gallery-item.visible {
+      opacity: 1;
+      transform: translateY(0);
+    }
+
+    .gallery-item img {
       width: 100%;
-      border-radius: 12px;
-      box-shadow: 0 12px 24px rgba(0, 0, 0, 0.08);
-      transition: transform 0.3s ease, box-shadow 0.3s ease;
+      display: block;
+      border-radius: 16px;
+      box-shadow: 0 10px 24px rgba(0, 0, 0, 0.08);
+      transition: transform 0.4s ease, box-shadow 0.4s ease;
     }
 
-    .gallery-grid img:hover {
-      transform: scale(1.015);
-      box-shadow: 0 16px 32px rgba(0, 0, 0, 0.12);
+    .gallery-item img:hover {
+      transform: scale(1.02);
+      box-shadow: 0 16px 32px rgba(0, 0, 0, 0.1);
     }
 
     footer {
@@ -104,11 +115,12 @@
       font-size: 0.9rem;
       color: #aaa;
       background: var(--white);
+      margin-top: 80px;
     }
 
-    @media (max-width: 768px) {
+    @media (max-width: 600px) {
       header {
-        padding: 20px 24px;
+        padding: 20px;
       }
 
       .dropdown {
@@ -136,11 +148,11 @@
 
   <div class="container">
     <h1>Gallery</h1>
-    <div class="gallery-grid">
-      <img src="Exploded Organiser.32.jpg" alt="Exploded Organiser View 1" />
-      <img src="untitled.31.jpg" alt="Exploded Organiser View 2" />
-      <img src="g.bip.25.JPG" alt="Design Image 3" />
-      <!-- Add more <img> tags here if you have more images -->
+    <div class="grid">
+      <div class="gallery-item"><img src="g.bip.25.JPG" alt="Gallery Image 1"></div>
+      <div class="gallery-item"><img src="untitled.31.jpg" alt="Gallery Image 2"></div>
+      <div class="gallery-item"><img src="Exploded Organiser.32.jpg" alt="Gallery Image 3"></div>
+      <!-- Add more images here -->
     </div>
   </div>
 
@@ -149,6 +161,7 @@
   </footer>
 
   <script>
+    // Dropdown toggle
     const toggle = document.querySelector(".logo");
     const menu = document.getElementById("dropdownMenu");
 
@@ -160,6 +173,21 @@
       if (!menu.contains(e.target) && e.target !== toggle) {
         menu.style.display = "none";
       }
+    });
+
+    // Intersection Observer for fade-in
+    const observer = new IntersectionObserver((entries, obs) => {
+      entries.forEach((entry, index) => {
+        if (entry.isIntersecting) {
+          entry.target.classList.add('visible');
+          obs.unobserve(entry.target);
+        }
+      });
+    }, { threshold: 0.1 });
+
+    document.querySelectorAll('.gallery-item').forEach((el, i) => {
+      el.style.transitionDelay = `${i * 100}ms`; // stagger effect
+      observer.observe(el);
     });
   </script>
 
