--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Jack Simm – Portfolio</title>
+  <title>Jack Simm – Product Designer</title>
   <link href="https://fonts.googleapis.com/css2?family=SF+Pro+Display:wght@400;600&display=swap" rel="stylesheet">
   <style>
     :root {
-      --white: #ffffff;
       --text: #1d1d1f;
-      --bg-light: #f5f5f7;
+      --bg: #f5f5f7;
+      --white: #ffffff;
     }
 
     * {
@@ -20,7 +20,7 @@
 
     body {
       font-family: 'SF Pro Display', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
-      background-color: var(--bg-light);
+      background-color: var(--bg);
       color: var(--text);
     }
 
@@ -70,48 +70,62 @@
       position: relative;
       width: 100%;
       height: 100vh;
-      overflow: hidden;
+      background-image: url('g.bip.25.JPG'); /* Replace with your image file */
+      background-size: cover;
+      background-position: center;
+      display: flex;
+      align-items: center;
+      justify-content: center;
     }
 
-    .banner-img {
+    .banner::after {
+      content: '';
+      position: absolute;
+      top: 0; left: 0;
       width: 100%;
       height: 100%;
-      object-fit: cover;
-      display: block;
+      background: linear-gradient(to bottom, rgba(0, 0, 0, 0.45), rgba(0, 0, 0, 0));
+      z-index: 1;
       opacity: 0;
-      animation: fadeIn 2s ease-in-out forwards;
+      animation: fadeIn 1.5s ease forwards;
+    }
+
+    .hero-text {
+      position: relative;
+      z-index: 2;
+      text-align: center;
+      color: #fff;
+      text-shadow: 0 3px 12px rgba(0, 0, 0, 0.4);
+      animation: fadeInUp 1.2s ease forwards;
+      opacity: 0;
+    }
+
+    .hero-text h1 {
+      font-size: clamp(2rem, 6vw, 4rem);
+      font-weight: 600;
+      margin-bottom: 10px;
+    }
+
+    .hero-text h2 {
+      font-size: clamp(1.2rem, 2vw, 1.6rem);
+      font-weight: 400;
     }
 
     @keyframes fadeIn {
+      to {
+        opacity: 1;
+      }
+    }
+
+    @keyframes fadeInUp {
       from {
         opacity: 0;
-        transform: scale(1.02);
+        transform: translateY(30px);
       }
       to {
         opacity: 1;
-        transform: scale(1);
+        transform: translateY(0);
       }
-    }
-
-    .banner-text {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      text-align: center;
-      color: var(--white);
-      text-shadow: 0 2px 8px rgba(0, 0, 0, 0.4);
-    }
-
-    .banner-text h1 {
-      font-size: 3.5rem;
-      font-weight: 600;
-      margin-bottom: 12px;
-    }
-
-    .banner-text p {
-      font-size: 1.4rem;
-      font-weight: 400;
     }
 
     footer {
@@ -122,9 +136,9 @@
       background: var(--white);
     }
 
-    @media (max-width: 768px) {
+    @media (max-width: 600px) {
       header {
-        padding: 20px 24px;
+        padding: 20px;
       }
 
       .dropdown {
@@ -132,12 +146,12 @@
         width: calc(100% - 40px);
       }
 
-      .banner-text h1 {
-        font-size: 2.5rem;
+      .hero-text h1 {
+        font-size: 2rem;
       }
 
-      .banner-text p {
-        font-size: 1.1rem;
+      .hero-text h2 {
+        font-size: 1rem;
       }
     }
   </style>
@@ -154,13 +168,12 @@
     </div>
   </header>
 
-  <div class="banner">
-    <img src="g.bip.25.JPG" alt="Banner Image" class="banner-img" />
-    <div class="banner-text">
+  <section class="banner">
+    <div class="hero-text">
       <h1>Jack Simm</h1>
-      <p>Product Designer & Product Development Manager</p>
+      <h2>Product Designer & Product Development Manager</h2>
     </div>
-  </div>
+  </section>
 
   <footer>
     &copy; 2025 Jack Simm – Portfolio
