--- a/cv.html
+++ b/cv.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Jack Simm – Product Designer</title>
+  <title>Jack Simm – CV</title>
   <link href="https://fonts.googleapis.com/css2?family=SF+Pro+Display:wght@400;600&display=swap" rel="stylesheet">
   <style>
     :root {
@@ -70,68 +70,6 @@
       background: #f2f2f2;
     }
 
-    .banner {
-      position: relative;
-      width: 100%;
-      height: 100vh;
-      background-image: url('g.bip.25.JPG'); /* Replace with your image file */
-      background-size: cover;
-      background-position: center;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-    }
-
-    .banner::after {
-      content: '';
-      position: absolute;
-      top: 0; left: 0;
-      width: 100%;
-      height: 100%;
-      background: linear-gradient(to bottom, rgba(0, 0, 0, 0.45), rgba(0, 0, 0, 0));
-      z-index: 1;
-      opacity: 0;
-      animation: fadeIn 1.5s ease forwards;
-    }
-
-    .hero-text {
-      position: relative;
-      z-index: 2;
-      text-align: center;
-      color: #fff;
-      text-shadow: 0 3px 12px rgba(0, 0, 0, 0.4);
-      animation: fadeInUp 1.2s ease forwards;
-      opacity: 0;
-    }
-
-    .hero-text h1 {
-      font-size: clamp(2rem, 6vw, 4rem);
-      font-weight: 600;
-      margin-bottom: 10px;
-    }
-
-    .hero-text h2 {
-      font-size: clamp(1.2rem, 2vw, 1.6rem);
-      font-weight: 400;
-    }
-
-    @keyframes fadeIn {
-      to {
-        opacity: 1;
-      }
-    }
-
-    @keyframes fadeInUp {
-      from {
-        opacity: 0;
-        transform: translateY(30px);
-      }
-      to {
-        opacity: 1;
-        transform: translateY(0);
-      }
-    }
-
     section {
       padding: 80px 60px;
       max-width: 1000px;
@@ -163,7 +101,13 @@
       background: var(--white);
     }
 
-    @media (max-width: 600px) {
+    .columns {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      gap: 40px;
+    }
+
+    @media (max-width: 700px) {
       header {
         padding: 20px;
       }
@@ -173,16 +117,12 @@
         width: calc(100% - 40px);
       }
 
-      .hero-text h1 {
-        font-size: 2rem;
-      }
-
-      .hero-text h2 {
-        font-size: 1rem;
-      }
-
       section {
         padding: 60px 20px;
+      }
+
+      .columns {
+        grid-template-columns: 1fr;
       }
     }
   </style>
@@ -197,47 +137,85 @@
       <a href="#profile">Profile</a>
       <a href="#experience">Experience</a>
       <a href="#education">Education</a>
+      <a href="#skills">Skills</a>
+      <a href="#hobbies">Hobbies</a>
       <a href="#contact">Contact</a>
     </div>
   </header>
-
-  <!-- Banner -->
-  <section class="banner">
-    <div class="hero-text">
-      <h1>Jack Simm</h1>
-      <h2>Product Designer & Product Development Manager</h2>
-    </div>
-  </section>
 
   <!-- Profile Section -->
   <section id="profile">
     <h2>Profile</h2>
     <p>
-      An experienced mechanical maintenance technician with over half a decade in manufacturing.
-      Proven in team communication, customer-centric thinking, and design problem-solving.
+      An experienced Mechanical Maintenance Technician with a proven track record in manufacturing.
+      Over half a decade at Unipres UK across key departments enabled me to develop teamwork,
+      communication, and customer-centric skills. I value integrity, professionalism, and results,
+      and bring a solution-focused mindset to every challenge.
     </p>
   </section>
 
   <!-- Experience Section -->
   <section id="experience">
     <h2>Experience</h2>
-    <p><strong>Fabb Brothers (Mar 2024 – Sep 2024)</strong><br/>
-    Product Development Manager – Led sales, R&D, supplier coordination, and product innovation.</p>
+
+    <p><strong>Fabb Brothers (Mar 2024 – Sep 2024)</strong></p>
+    <ul>
+      <li>Oversaw sales and distribution at the main workshop.</li>
+      <li>Led R&D and enhanced product ranges.</li>
+      <li>Liaised with suppliers and artisans on production/design projects.</li>
+    </ul>
+
     <br/>
-    <p><strong>Unipres UK (2017 – 2023)</strong><br/>
-    Roles: Kaizen, Engineering Maintenance Technician<br/>
-    - Developed SOPs, implemented QHSE improvements<br/>
-    - Created CAD designs and tech packs, drove cost reduction</p>
+
+    <p><strong>Unipres UK</strong></p>
+    <ul>
+      <li>Kaizen Team: Supported QHSE, cost, delivery, and productivity improvements.</li>
+      <li>Engineering Maintenance: Developed SOPs, root cause analysis, design improvements.</li>
+      <li>Cost Planning: Created CAD schemes and technical data packs for manufacturing.</li>
+    </ul>
   </section>
 
   <!-- Education Section -->
   <section id="education">
     <h2>Education</h2>
     <ul>
-      <li>BA Product Design (Middlesex University) – 2023–Present</li>
-      <li>HNC Manufacturing Engineering – 2021–2023</li>
-      <li>Level 3 Engineering BTEC – 2016–2021</li>
-      <li>Level 3 Business Studies BTEC – 2015–2016</li>
+      <li><strong>BA Product Design</strong>, Middlesex University (2023 – Present)</li>
+      <li><strong>HNC Manufacturing Engineering</strong> (2021 – 2023)</li>
+      <li><strong>Level 3 Engineering BTEC</strong> (2016 – 2021)</li>
+      <li><strong>Level 3 Business Studies BTEC</strong> (2015 – 2016)</li>
+    </ul>
+  </section>
+
+  <!-- Skills Section -->
+  <section id="skills">
+    <h2>Skills</h2>
+    <div class="columns">
+      <ul>
+        <li>UX/UI</li>
+        <li>Typography</li>
+        <li>CAD & Technical Packs</li>
+        <li>Communication</li>
+        <li>Problem Solving</li>
+      </ul>
+      <ul>
+        <li>Photoshop / Illustrator / InDesign</li>
+        <li>HTML / CSS</li>
+        <li>Presentation Skills</li>
+        <li>Team Collaboration</li>
+        <li>Attention to Detail</li>
+      </ul>
+    </div>
+  </section>
+
+  <!-- Hobbies Section -->
+  <section id="hobbies">
+    <h2>Hobbies & Interests</h2>
+    <ul>
+      <li>Design</li>
+      <li>Film Photography</li>
+      <li>Reading</li>
+      <li>Tennis, Badminton, Running</li>
+      <li>Antiques, TV & Film</li>
     </ul>
   </section>
 
@@ -250,7 +228,7 @@
 
   <!-- Footer -->
   <footer>
-    &copy; 2025 Jack Simm – Portfolio
+    &copy; 2025 Jack Simm – CV Page
   </footer>
 
   <!-- Script for Dropdown -->
