--- a/cv.html
+++ b/cv.html
@@ -4,12 +4,11 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Jack Simm – CV</title>
-  <link href="https://fonts.googleapis.com/css2?family=SF+Pro+Display:wght@400;600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=SF+Pro+Display:wght@400;600&display=swap" rel="stylesheet" />
   <style>
     :root {
       --text: #1d1d1f;
-      --bg: #f5f5f7;
-      --white: #ffffff;
+      --bg: #ffffff;
     }
 
     * {
@@ -26,6 +25,8 @@
       font-family: 'SF Pro Display', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
       background-color: var(--bg);
       color: var(--text);
+      line-height: 1.6;
+      font-size: 17px;
     }
 
     header {
@@ -33,8 +34,8 @@
       justify-content: space-between;
       align-items: center;
       padding: 20px 60px;
-      background-color: var(--white);
-      box-shadow: 0 1px 4px rgba(0, 0, 0, 0.05);
+      background-color: #ffffff;
+      border-bottom: 1px solid #eaeaea;
       position: sticky;
       top: 0;
       z-index: 100;
@@ -50,29 +51,29 @@
       position: absolute;
       top: 70px;
       left: 60px;
-      background-color: var(--white);
-      border-radius: 14px;
-      box-shadow: 0 12px 30px rgba(0, 0, 0, 0.1);
+      background-color: #ffffff;
+      border: 1px solid #e0e0e0;
+      border-radius: 12px;
       display: none;
       flex-direction: column;
       z-index: 99;
+      width: 200px;
     }
 
     .dropdown a {
-      padding: 16px 24px;
+      padding: 14px 20px;
       text-decoration: none;
       color: var(--text);
       font-weight: 500;
-      transition: background 0.2s;
     }
 
     .dropdown a:hover {
-      background: #f2f2f2;
+      background-color: #f5f5f5;
     }
 
     section {
       padding: 80px 60px;
-      max-width: 1000px;
+      max-width: 900px;
       margin: 0 auto;
     }
 
@@ -84,27 +85,28 @@
 
     section p, section li {
       font-size: 1rem;
-      line-height: 1.6;
-      color: #444;
+      color: #2c2c2e;
     }
 
     section ul {
-      padding-left: 20px;
       list-style: disc;
-    }
-
-    footer {
-      text-align: center;
-      padding: 60px 20px;
-      font-size: 0.9rem;
-      color: #aaa;
-      background: var(--white);
+      padding-left: 20px;
+      margin-bottom: 1rem;
     }
 
     .columns {
       display: grid;
       grid-template-columns: 1fr 1fr;
       gap: 40px;
+    }
+
+    footer {
+      text-align: center;
+      padding: 60px 20px;
+      font-size: 0.9rem;
+      color: #999;
+      background-color: #ffffff;
+      border-top: 1px solid #eee;
     }
 
     @media (max-width: 700px) {
@@ -147,7 +149,7 @@
   <section id="profile">
     <h2>Profile</h2>
     <p>
-      An experienced Mechanical Maintenance Technician with a proven track record in manufacturing.
+      An experienced mechanical maintenance technician with a proven track record in manufacturing.
       Over half a decade at Unipres UK across key departments enabled me to develop teamwork,
       communication, and customer-centric skills. I value integrity, professionalism, and results,
       and bring a solution-focused mindset to every challenge.
@@ -158,20 +160,18 @@
   <section id="experience">
     <h2>Experience</h2>
 
-    <p><strong>Fabb Brothers (Mar 2024 – Sep 2024)</strong></p>
+    <p><strong>Fabb Brothers</strong> <br><em>Product Development Manager, Mar 2024 – Sep 2024</em></p>
     <ul>
-      <li>Oversaw sales and distribution at the main workshop.</li>
-      <li>Led R&D and enhanced product ranges.</li>
-      <li>Liaised with suppliers and artisans on production/design projects.</li>
+      <li>Oversaw daily operations of sales and distribution.</li>
+      <li>Led R&D for new product ranges and improvements.</li>
+      <li>Collaborated with suppliers and artisans on design projects.</li>
     </ul>
-
-    <br/>
 
     <p><strong>Unipres UK</strong></p>
     <ul>
-      <li>Kaizen Team: Supported QHSE, cost, delivery, and productivity improvements.</li>
-      <li>Engineering Maintenance: Developed SOPs, root cause analysis, design improvements.</li>
-      <li>Cost Planning: Created CAD schemes and technical data packs for manufacturing.</li>
+      <li>Worked in Kaizen Team: Improved productivity, quality and delivery.</li>
+      <li>Engineering Maintenance Technician: SOP creation, defect analysis, equipment improvements.</li>
+      <li>Cost Planning: Designed CAD schemes and technical data packs to support builds.</li>
     </ul>
   </section>
 
@@ -179,10 +179,10 @@
   <section id="education">
     <h2>Education</h2>
     <ul>
-      <li><strong>BA Product Design</strong>, Middlesex University (2023 – Present)</li>
-      <li><strong>HNC Manufacturing Engineering</strong> (2021 – 2023)</li>
-      <li><strong>Level 3 Engineering BTEC</strong> (2016 – 2021)</li>
-      <li><strong>Level 3 Business Studies BTEC</strong> (2015 – 2016)</li>
+      <li>BA Product Design, Middlesex University (2023 – Present)</li>
+      <li>HNC Manufacturing Engineering (2021 – 2023)</li>
+      <li>Level 3 Engineering BTEC (2016 – 2021)</li>
+      <li>Level 3 Business Studies BTEC (2015 – 2016)</li>
     </ul>
   </section>
 
